# candy

./: .autotools  .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Changelog  LICENCE  Main.cc  Makefile  README  README.md  Simplifier.h  appveyor.yml  callgrind.out.reference  callgrind.out.stl2-1  callgrind.out.stl2-2  callgrind.out.stl2-3  callgrind.out.stl2-4  sonar-project.properties  starexec_build
fuzzing/: CMakeLists.txt  candy_ca_fuzz.cc  candy_fuzz.cc  candy_parser_fuzz.cc  candy_proof_fuzz.cc  util.cc  util.h
randomsimulation/: CMakeLists.txt  ClauseOrder.cc  ClauseOrder.h  Conjectures.cc  Conjectures.h  Partition.cc  Partition.h  Propagation.cc  Propagation.h  RandomSimulator.cc  RandomSimulator.h  Randomization.cc  Randomization.h  SimulationVector.cc  SimulationVector.h
src/candy/: CMakeLists.txt  FuzzIpasir.cc  Main.cc  cnf2aig.cc
src/candy/core/: Branch.cc  Branch.h  CMakeLists.txt  CNFProblem.cc  CNFProblem.h  CandySolverInterface.h  CandySolverResult.h  Certificate.cc  Certificate.h  Clause.cc  Clause.h  ClauseAllocator.cc  ClauseAllocator.h  ClauseDatabase.cc  ClauseDatabase.h  ConflictAnalysis.cc  ConflictAnalysis.h  ConflictAnalysisThreadSafe.h  Constants.h  DRATChecker.cc  DRATChecker.h  Logging.h  Memory.h  Propagate.h  PropagateThreadSafe.h  ReduceDB.h  Restart.h  Solver.cc  Solver.h  SolverStatistics.cc  SolverStatistics.h  SolverTypes.h  Stamp.h  Statistics.cc  Statistics.h  Trail.h  Utilities.cc  Utilities.h
src/candy/frontend/: CLIOptions.cc  CLIOptions.h  CMakeLists.txt  CandyBuilder.cc  CandyBuilder.h  CandyCommandLineParser.cc  CandyCommandLineParser.h  Exceptions.cc  Exceptions.h  GateAnalyzerFrontend.cc  GateAnalyzerFrontend.h  RSARFrontend.cc  RSARFrontend.h  RSILFrontend.cc  RSILFrontend.h  RSILSolverBuilder.cc  RSILSolverBuilder.h  RandomSimulationFrontend.cc  RandomSimulationFrontend.h  SolverFactory.cc  SolverFactory.h
src/candy/gates/: AIGProblem.h  BlockList.h  CMakeLists.txt  GateAnalyzer.cc  GateAnalyzer.h  GateBuilder.h  GateDFSTraversal.h  GateProblem.h  MiterDetector.cc  MiterDetector.h
src/candy/gbd/: CMakeLists.txt  hash.cpp  hash.h
src/candy/ipasir/: CMakeLists.txt  ipasircandy.cc
src/candy/minimizer/: CMakeLists.txt  Minimizer.cc  Minimizer.h  NormalizedClauseList.cc  NormalizedClauseList.h
src/candy/mtl/: Alg.h  BoundedQueue.h  EMA.h  Heap.h  LockfreeMap.h  Memory.h  Stamp.h  State.h
src/candy/randomsimulation/: CMakeLists.txt  ClauseOrder.cc  ClauseOrder.h  Conjectures.cc  Conjectures.h  GateDFSTraversal.h  GateDFSVisitor.h  Partition.cc  Partition.h  Propagation.cc  Propagation.h  RandomSimulator.cc  RandomSimulator.h  Randomization.cc  Randomization.h  SimulationVector.cc  SimulationVector.h
src/candy/rsar/: ARSolver.cc  ARSolver.h  ApproximationState.cc  ApproximationState.h  CMakeLists.txt  Heuristics.cc  Heuristics.h  Refinement.cc  Refinement.h  SolverAdapter.cc  SolverAdapter.h
src/candy/rsil/: BranchingHeuristics.cc  BranchingHeuristics.h  CMakeLists.txt  ImplicitLearningAdvice.cc  ImplicitLearningAdvice.h  RSARHeuristicsFilter.cc  RSARHeuristicsFilter.h  Utils.cc  Utils.h
src/candy/simp/: CMakeLists.txt  SimpSolver.cc  SimpSolver.h  Subsumption.cc  Subsumption.h  VariableElimination.cc  VariableElimination.h
src/candy/simplification/: AsymmetricVariableReduction.h  CMakeLists.txt  OccurenceList.h  Subsumption.h  SubsumptionClause.h  SubsumptionClauseDatabase.h  VariableElimination.h
src/candy/sonification/: CMakeLists.txt  ControllerInterface.cc  ControllerInterface.h  Logging.h  SolverSonification.cc  SolverSonification.h  Sonification.cc  Sonification.h
src/candy/systems/: CMakeLists.txt  ReduceDB.h  Restart.h
src/candy/teexgraph/: BDGraph.cpp  CMakeLists.txt  CenGraph.cpp  Graph.cpp  Graph.h  GraphTemplated.hpp
src/candy/utils/: Attributes.h  CLIOptions.cc  CLIOptions.h  CMakeLists.txt  CNFProblem.cc  CNFProblem.h  CandyBuilder.cc  CandyBuilder.h  CheckedCast.h  Exceptions.h  FastRand.cc  FastRand.h  MemUtils.h  Memory.h  Options.cc  Options.h  ParseUtils.h  Runtime.cc  Runtime.h  StreamBuffer.cc  StreamBuffer.h  StringUtils.h  System.cc  System.h  Utilities.cc  Utilities.h
src/sonification/: CMakeLists.txt  SolverSonification.cc  SolverSonification.h  Sonification.cc  Sonification.h
src/sonification/csound/: candy-2.csd  candy-3.csd  candy-4.csd  csound.rack  csound.sh  voice-of-minisat-2.csd  voice-of-minisat-3.csd  voice-of-minisat-4.csd  voice-of-minisat-5.csd
test/: CMakeLists.txt  Main.cc  Makefile  countgates.txt  diff.txt  pattern_d.cnf  printgates.txt
test/randomsimulation/: ClauseOrderTests.cc  PartitionTests.cc  PropagationTests.cc  RandomSimulatorTests.cc  SimulationVectorTests.cc  TestGateStructure.cc  TestGateStructure.h  TestGateStructureTests.cc  TestUtils.cc  TestUtils.h
testsrc/candy/clause/: CMakeLists.txt  Main.cc  TestClauseFactory.h
testsrc/candy/gates/: CMakeLists.txt  GateAnalyzerTests.cc  GateDFSTraversalTests.cc  Main.cc  MiterDetectorTests.cc  countgates.txt
testsrc/candy/incremental/: CMakeLists.txt  IncrementalTests.cc
testsrc/candy/integration/: CMakeLists.txt  IntegrationTests.cc
testsrc/candy/ipasir/: CMakeLists.txt  IpasirTests.cc
testsrc/candy/minimizer/: CMakeLists.txt  MinimizerTests.cc
testsrc/candy/randomsimulation/: CMakeLists.txt  ClauseOrderTests.cc  ConjectureFilterTests.cc  GateDFSTraversalTests.cc  GateDFSVisitorTests.cc  GateFilterTests.cc  PartitionTests.cc  PropagationTests.cc  RandomSimulatorTests.cc  RandomizationTests.cc  SimulationVectorTests.cc  TestGateStructure.cc  TestGateStructure.h  TestGateStructureTests.cc  TestUtils.cc  TestUtils.h
testsrc/candy/rsar/: ARSolverTests.cc  ApproximationStateTests.cc  CMakeLists.txt  HeuristicsMock.cc  HeuristicsMock.h  HeuristicsTests.cc  RefinementTests.cc  SolverMock.cc  SolverMock.h  SolverMockTests.cc  TestUtils.cc  TestUtils.h
testsrc/candy/rsil/: BranchingHeuristicsTests.cc  CMakeLists.txt  ImplicitLearningAdviceTests.cc  RSARHeuristicsFilterTests.cc  TestUtils.h
testsrc/candy/simp/: CMakeLists.txt  Main.cc  SimpSolverTests.cc
(+234 files in other folders)
