cmake_minimum_required(VERSION 3.5)
add_subdirectory(utils)
add_subdirectory(core)
add_subdirectory(systems)
add_subdirectory(simplification)
add_subdirectory(gates)
add_subdirectory(gbd)
add_subdirectory(minimizer)
add_subdirectory(randomsimulation)
add_subdirectory(rsar)
add_subdirectory(ipasir)
add_subdirectory(frontend)
add_subdirectory(sonification)
add_subdirectory(teexgraph)
