add_library(frontend OBJECT
    SolverFactory.h
    SolverFactory.cc
    RSILFrontend.h
    RSILFrontend.cc
    Exceptions.h
    Exceptions.cc
    RandomSimulationFrontend.h
    RandomSimulationFrontend.cc
    GateAnalyzerFrontend.h
    GateAnalyzerFrontend.cc
    RSARFrontend.h
    RSARFrontend.cc
    CandyCommandLineParser.h
    CandyCommandLineParser.cc)

